--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nebaz/react-kronos",
-  "version": "1.6.1",
+  "name": "kronos-datepicker",
+  "version": "1.6.2",
   "description": "A fast, intuitive, and elegant date and time picker for React.",
   "main": "dist/bundle.js",
   "scripts": {
